# MathFormerCalc

./: .gitignore  electron-builder.yml  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
electron/: main.ts  preload.ts  tsconfig.json
public/: .gitkeep
python/: calculator.py  pyproject.toml  server.py
src/: App.tsx  vite-env.d.ts
src/components/: Display.tsx  Keypad.tsx  TitleBar.tsx
src/styles/: index.css
