[project]
name = "mathformer-calculator"
version = "0.1.0"
description = "Calculator backend using MathFormer neural network"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "mathformer",
    "torch",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
